feat: add UserAccount resource to API
